@@ -35,7 +35,7 @@ TCHAR *g_pszDBEngines[MAX_DB_ENGINES] = { _T("MySQL"), _T("PostgreSQL"),
 static TCHAR *m_pszValidDrivers[MAX_DB_ENGINES][MAX_DB_DRIVERS] =
 {
    { _T("mysql.ddr"), _T("odbc.ddr") },
-   { _T("odbc.ddr"), NULL },
+   { _T("pgsql.ddr"), _T("odbc.ddr") },
    { _T("mssql.ddr"), _T("odbc.ddr") },
    { _T("odbc.ddr"), NULL }
 };
